tests/baselines/reference/invalidImportAliasIdentifiers.errors.txt
==== tests/cases/compiler/invalidImportAliasIdentifiers.ts (8 errors) ====
    // none of these should work, since non are actually modules
    
    var V = 12;
    
    import v = V;
    ~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
               ~
!!! error TS2179: Unable to resolve module reference 'V'.
    
    class C {
        name: string;
    }
    
    import c = C;
    ~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
               ~
!!! error TS2179: Unable to resolve module reference 'C'.
    
    enum E {
        Red, Blue
    }
    
    import e = E;
    ~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
               ~
!!! error TS2179: Unable to resolve module reference 'E'.
    
    interface I {
        id: number;
    }
    
    import i = I;
    ~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
               ~
!!! error TS2179: Unable to resolve module reference 'I'.
    